[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/EndGate.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/Gate.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/EndGate.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 13 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("UnlockedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("UnlockedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.9109, 19.1624 )

[node name="EndGate" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="UnlockedSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4

[node name="LockedSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 83 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( -1, 83 )
scale = Vector2( 4.09097, 2.45272 )
shape = SubResource( 4 )
